add multitenancy
- path based
- with db discriminator (no manual logic required)
- flyway for db migrations

Signed-off-by: Niko Köbler <niko@n-k.de>